--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+This probject is obsolete. Do no use.  
+
 ACE (occasionally called hcs in development, as that's what it was originally
 called internally) is a heraldic commenting system written specifically for
 the use of the Kingdom of Ansteorra.  It's under GPL (see the file COPYING)
